<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.team15.skredet.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.team15.skredet.ui.map.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_regions"
        android:name="com.team15.skredet.ui.region.RegionsFragment"
        android:label="@string/menu_regions"
        tools:layout="@layout/fragment_regions" />

    <fragment
        android:id="@+id/nav_my_areas"
        android:name="com.team15.skredet.ui.region.FavoritesFragment"
        android:label="@string/menu_critical"
        tools:layout="@layout/fragment_favorites" />
</navigation>